pyquest/tests/parsing/invalid/test006.ql
// Question with invalid type
form testForm {
    "Question?"
    var : cows
}